--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   riverpod_annotation: ^2.1.5
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.0
-  go_router: ^10.1.2
+
   flutter_animate: ^4.2.0+1
   flutter_hooks: ^0.20.1
   responsive_framework: ^1.1.1
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   google_fonts: ^6.0.0
   device_preview: ^1.1.0
+  auto_route: ^7.8.3
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +38,7 @@ dev_dependencies:
   custom_lint: ^0.5.3
   riverpod_lint: ^2.0.4
   freezed: ^2.4.2
-  go_router_builder: ^2.0.1
+  auto_route_generator: ^7.3.1
 
 flutter:
   uses-material-design: true
